--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -2,9 +2,15 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>$Title$</title>
+  <title>Web title goes here</title>
 </head>
+<style>
+  body {
+    font-family: sans-serif;
+  }
+</style>
+
 <body>
-$END$
+Hello, I'm a web page in an embedded Chromium browser.
 </body>
 </html>
